set goal form refresh; fix rules; 'newDay' fc modified;  fixed overflowing styles; 'Goal' component;

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,5 +8,6 @@
 
 body {
   min-height: 100vh;
+  max-height: 100vh;
   position: relative;
 }
